<resources>
    <string name="app_name">App_ReciboGenerator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Início</string>
    <string name="second_fragment_label">Criação de recibo</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="titulo_app">Gerador de Recibos (1.0)</string>
    <string name="string1_f2">Referente ao mês:</string>
    <string name="editText1_f2">(Ex: Janeiro.2023)</string>
    <string name="editText2_f2">(Ex: 01/01/2023)</string>
    <string name="string2_f2">Data de Emissão:</string>
    <string name="baixar">baixar</string>
</resources>